--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 </body>
 
-<script src="./control-flow.js"></script>
+<!-- <script src="./control-flow.js"></script> -->
+<script src="./esercizi.js"></script>
 
 </html>
