--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body>
 </body>
-
 <!-- <script src="./control-flow.js"></script> -->
-<script src="./esercizi.js"></script>
+<!-- <script src="./main.js"></script> -->
+<!-- <script src="./control-flow.js"></script> -->
+<!-- <script src="./esercizi1.js"></script> -->
+<script src="./functions.js"></script>
+
 
 </html>
