--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- <script src="./main.js"></script> -->
 <!-- <script src="./control-flow.js"></script> -->
 <!-- <script src="./esercizi1.js"></script> -->
-<script src="./functions.js"></script>
-
+<!-- <script src="./functions.js"></script> -->
+<script src="./esercizi2.js"></script>
 
 </html>
