--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <!-- <script src="./control-flow.js"></script> -->
 <!-- <script src="./esercizi1.js"></script> -->
 <!-- <script src="./functions.js"></script> -->
-<script src="./esercizi2.js"></script>
+<!-- <script src="./esercizi2.js"></script> -->
+<!-- <script src="./arrays.js"></script> -->
+<script src="./esercizi3.js"></script>
 
 </html>
