--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <!-- <script src="./arrays.js"></script> -->
 <!-- <script src="./esercizi3.js"></script> -->
 <!-- <script src="./objects.js"></script> -->
-<script src="./esercizi4.js"></script>
+<!-- <script src="./esercizi4.js"></script> -->
+<script src="./esercizi5.js"></script>
+<script src="./high-order-functions.js"></script>
 
 
 </html>
