--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- <script src="./objects.js"></script> -->
 <!-- <script src="./esercizi4.js"></script> -->
 <script src="./esercizi5.js"></script>
-<script src="./high-order-functions.js"></script>
+<!-- <script src="./high-order-functions.js"></script>-->
 
 
 </html>
