--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <!-- <script src="./esercizi3.js"></script> -->
 <!-- <script src="./objects.js"></script> -->
 <!-- <script src="./esercizi4.js"></script> -->
-<script src="./esercizi5.js"></script>
+<!-- <script src="./esercizi5.js"></script> -->
+<!-- <script src="./classes-and-object.js"></script> -->
+<script src="./esercizi6.js"></script>
 <!-- <script src="./high-order-functions.js"></script>-->
 
 
