--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 <!-- <script src="./esercizi4.js"></script> -->
 <!-- <script src="./esercizi5.js"></script> -->
 <!-- <script src="./classes-and-object.js"></script> -->
-<script src="./esercizi6.js"></script>
+<!-- <script src="./esercizi6.js"></script> -->
 <!-- <script src="./high-order-functions.js"></script>-->
+<script src="./esercizi7.js"></script>
 
 
 </html>
